Clean up some of the architecture docs

--- a/docs/latex/Architecture.tex
+++ b/docs/latex/Architecture.tex
@@ -100,32 +100,25 @@ tabsize=2,
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Design Strategy}
-Our design process used the \textbf{Decomposition} and \textbf{Design based on
-quality requirements} strategies.
+The architectural design strategy for this software engineering project used two
+main approaches: decomposition and design based on quality requirements.
 
-Application of \textbf{Decomposition Strategy:}
+\begin{enumerate}[label*=\arabic*.]
+	\item[\textbullet] {\bf Decomposition Strategy}: The decomposition strategy
+	involved breaking the system down into individual components or subsystems.
+	These components were then designed and implemented independently, and their
+	interactions were defined. This approach allowed for a more modular design,
+	which made the system easier to understand, maintain, and extend.
 
-Our system has been designed in individual components or subsystems. The
-interaction of these components create the fully functioning system. This
-interaction of subsystems is used for the system's Architectural style and
-pattern decisions.
-
-Application of \textbf{Design based on quality requirements Strategy:}
-
-Each subsystem has also been created based on certain quality requirements in
-mind to ensure when interacting together, the system meets the specified
-requirements.
-
-% The system has been created using the decomposition design strategy. 
-% Our system holds true to this description, as smaller component subsystems have been created and their interaction creates the fully functioning system.
-
-% Each subsystem has also been created based on certain quality requirements in mind to ensure when brought together, the system meets its requirements.
-
-% As the decomposition strategy is described, (Software Architecture in Practice - 3rd, Len Bass et al. 2013)'In some contexts, the system may end up being constructed mostly from preexisting components; in others, the preexisting components may be a smaller portion of the overall system.'(page 312). 
+	\item[\textbullet] {\bf Requirements Strategy}: The design based on quality
+	requirements strategy involved identifying the key quality requirements for
+	the system and then designing the system to meet those requirements. This
+	approach ensured that the system would be reliable, efficient, secure, and
+	usable.
+\end{enumerate}
 
 
 \section{Architectural Styles}
-
 
 
 \pagebreak
@@ -133,6 +126,12 @@ requirements.
 \section{Quality Requirements}
 
 \subsection{Performance}
+
+\begin{enumerate}[label*=\arabic*.]
+	\item[\textbullet] {\bf Description}:
+
+	\item[\textbullet] {\bf Quantification}:
+\end{enumerate}
 
 \subsubsection*{Description}
 The application should demonstrate efficient speed and
@@ -154,16 +153,12 @@ and RAM usage and observing performance during peak usage.
 
 \subsection{Customizability}
 \subsubsection*{Description}
+The system be extensible and customizable to the extent where they can change
+the theme of the system to their liking. Customize application command shortcuts
+as they see fit and change the layout of the system with hot-swappable tiles.
+The system should also allow for custom plugin creation and customization.
 
-
-\subsection{Reliability} 
-\subsubsection*{Description}
-
-The system should be able to recover from unexpected shutdowns or errors without
-losing data.
-
-The system should be able to store and retrieve images and projects reliably.
-
+\subsubsection*{Quantification}
 
 \subsection{Usability} 
 The system should be clear and concise on how it should be operated. 
@@ -202,51 +197,75 @@ of the aforementioned operating systems. It must be able to import and export
 image files with the aforementioned formats without any data loss or corruption. 
 
 
-% \subsection{Availability}
-
-% The system should allow plugins to be loaded in real time while the system is
-% running.
-
-
 \section{Architectural Design \& Patterns}
 Three main architectural patterns where identified to decompose the base system
 into components and subsystems.
 
 \subsection{Model-View-Controller (MVC)}
 The MVC pattern was chosen in order to create clear distinction between the user
-interface, business logic and system data. This trinity-based setup enables separation of concerns and allows for the system to be easily extended and maintained.
-Each of the three components play their parts as follows:
+interface, business logic and system data. This trinity-based setup enables
+separation of concerns and allows for the system to be easily extended and
+maintained. Each of the three components play their parts as follows:
 \begin{enumerate}[label*=\arabic*.]
-	\item[\textbullet] {\bf Model}: The 'model' in our system is the core backend graph running on the Node.js server within the Electron application.
-	This represents the core state of the system, and is the central source of truth for all other views in the system. In a sense, it acts as a central database which all other 'services' utilize.
-	\item[\textbullet] {\bf Views}: Our system consists of multiple views which all derive representations from the core graph {\it model}.
-	Some examples of views in the system include the frontend {\it Svelvet} graph which the user interacts with, as well as the text-based (e.g. JSON) model which is passed to the LLM AI assistant.
-	When changes take place within the core graph, these views are automatically updated to reflect them.
-	\item[\textbullet] {\bf Controllers}: These are the 'middle-men' between each view, and the core graph.
-	As our system is an Electron application, the frontend views must be able to communicate with the core graph over Electron's IPC ({\it Interprocess Communication}) protocol.
+	\item[\textbullet] {\bf Model}: The 'model' in our system is the core
+	backend graph running on the Node.js server within the Electron application.
+	This represents the core state of the system, and is the central source of
+	truth for all other views in the system. In a sense, it acts as a central
+	database which all other 'services' utilize.
+	\item[\textbullet] {\bf Views}: Our system consists of multiple views which
+	all derive representations from the core graph {\it model}. Some examples of
+	views in the system include the frontend {\it Svelvet} graph which the user
+	interacts with, as well as the text-based (e.g. JSON) model which is passed
+	to the LLM AI assistant. When changes take place within the core graph,
+	these views are automatically updated to reflect them.
+	\item[\textbullet] {\bf Controllers}: These are the 'middle-men' between
+	each view, and the core graph. As our system is an Electron application, the
+	frontend views must be able to communicate with the core graph over
+	Electron's IPC ({\it Interprocess Communication}) protocol.
 
-	When changes to local view state take place (e.g. If the user were to add a new node to the frontend graph), the controllers are responsible for instructing the core backend graph that these changes have taken place.
-	Then after the core graph has applied these changes in a manner that is consistent (forms a valid directed compute graph), all subscriber views are notified of the changes and are updated accordingly.
+	When changes to local view state take place (e.g. If the user were to add a
+	new node to the frontend graph), the controllers are responsible for
+	instructing the core backend graph that these changes have taken place. Then
+	after the core graph has applied these changes in a manner that is
+	consistent (forms a valid directed compute graph), all subscriber views are
+	notified of the changes and are updated accordingly.
 \end{enumerate}
 
 
 \subsection{Publish-Subscribe}
-Our implementation layers the Publish-Subscribe architectural pattern on top of the MVC pattern to endow the system with multiple-reactivity.
-The PubSub architecture allows one central source of information to be propagated to a multitude of subscribers, in our case the core graph and each of its views respectively.
-PubSub is a highly effective pattern as it abstracts the notion of state propagation into a composable set of participant modules which can be easily added/removed from the system.
-This helps us future-proof the application and allows for scalability as the system grows.
+Our implementation layers the Publish-Subscribe architectural pattern on top of
+the MVC pattern to endow the system with multiple-reactivity. The PubSub
+architecture allows one central source of information to be propagated to a
+multitude of subscribers, in our case the core graph and each of its views
+respectively. PubSub is a highly effective pattern as it abstracts the notion of
+state propagation into a composable set of participant modules which can be
+easily added/removed from the system. This helps us future-proof the application
+and allows for scalability as the system grows.
 
-As an example, let's say down the line we wanted to add a command line utility to compute a given graph without needing the user interface to be loaded;
-In such a situation we could easily disable the UI graph subscriber, and add alongside a 'command line utility' subsciber, which still communicates with the core graph, but does so entirely through the standard input/output streams of the command line.
+As an example, let's say down the line we wanted to add a command line utility
+to compute a given graph without needing the user interface to be loaded; In
+such a situation we could easily disable the UI graph subscriber, and add
+alongside a 'command line utility' subscriber, which still communicates with the
+core graph, but does so entirely through the standard input/output streams of
+the command line.
 
-Thus by using this architecture we have effectively made core parts of the system 'hot-swappable'.
+Thus by using this architecture we have effectively made core parts of the
+system 'hot-swappable'.
 
 \subsection{Client-Server}
-The Large Language Model AI assistant is a significant part of the system which we are building, and at the time of writing all major LLMs (which provide the sufficient level of intellitence that we are looking for) are hosted on the cloud. As our app is hosted natively on this users machine, this means we must also enable remote communication to the respective LLM API's.
+The Large Language Model AI assistant is a significant part of the system which
+we are building, and at the time of writing all major LLMs (which provide the
+sufficient level of intelligence that we are looking for) are hosted on the
+cloud. As our app is hosted natively on this users machine, this means we must
+also enable remote communication to the respective LLM API's.
 
-From this perspective, the Blix application exists as a client to the LLM API server, and must be able to perform remote HTTP requests as such.
-Google has recently announced the release of their PaLM models as open source, however, and so we are currently investigating the possibility of hosting the LLM locally on the users machine.
-In such a situation the client-server architecture would still apply, except that the server 'LLM API' would be hosted locally on the users machine, and all communication would be done over the loopback interface.
+From this perspective, the Blix application exists as a client to the LLM API
+server, and must be able to perform remote HTTP requests as such. Google has
+recently announced the release of their PaLM models as open source, however, and
+so we are currently investigating the possibility of hosting the LLM locally on
+the users machine. In such a situation the client-server architecture would
+still apply, except that the server 'LLM API' would be hosted locally on the
+users machine, and all communication would be done over the loopback interface.
 
 \section{Constraints}
 
